--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -11,7 +11,7 @@ $primory-color: #03a9f4;
 /* items */
 
 .items-container {
-  padding: 30px 0px;
+  padding: 50px 0px;
 }
 
 /* item cart */
@@ -172,19 +172,22 @@ $primory-color: #03a9f4;
   .items-link {
     width: 280px;
   }
-}
 
-@media (min-width: 620px) {
   .items-container {
+    padding: 50px 20px;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex-wrap: wrap;
   }
 
-  .item-cart-img {
-    height: 300px;
-  }
+  .item-cart {
+    margin: 10px;
 
+    min-width: 380px;
+  }
+}
+
+@media (min-width: 620px) {
   .item-text,
   .item-cart-desc,
   .item-desc-list-title {
@@ -208,13 +211,13 @@ $primory-color: #03a9f4;
   .basic-info-list,
   .items-link {
     margin: 0px 0px 20px 20px;
+    width: 300px;
   }
 }
 
-@media (min-width: 700px) {
-  .basic-info-list,
-  .items-link {
-    width: 300px;
+@media (min-width: 840px) {
+  .items-container {
+    justify-content: start;
   }
 }
 
@@ -222,10 +225,6 @@ $primory-color: #03a9f4;
   .item-text,
   .item-cart-desc {
     font-size: 20px;
-  }
-
-  .item-cart {
-    min-width: 550px;
   }
 
   .item-title {
