--- a/scss-css/blocks/categories.scss
+++ b/scss-css/blocks/categories.scss
@@ -42,8 +42,11 @@ $main-background-color: #fff6ef;
   list-style-type: none;
 }
 
-.categoty-line {
+.category-line {
   padding: 0px 20px 20px 0px;
+}
+
+.category-link {
   text-decoration: none;
 }
 
@@ -95,7 +98,7 @@ $main-background-color: #fff6ef;
 
 @media (min-width: 420px) {
   .category-cart {
-    padding-left: 10px;
+    margin-left: 10px;
     width: 350px;
     height: 200px;
   }
