создала страницу отзывов, прописала ссылки на нее, поправила отсьупы в подвале

--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -897,8 +897,12 @@
 /* mixin */
 /* variables */
 /* mixin */
-.footer-container {
+.footer {
   background-color: #fff6ef;
+}
+
+.footer-container {
+  padding-top: 10px;
 }
 
 .info {
@@ -934,6 +938,7 @@
     height: 25px;
   }
   .footer-menu {
+    padding-top: 20px;
     min-width: 480px;
   }
   .footer-menu-list:nth-child(1),
