--- a/scss-css/blocks/footer.css
+++ b/scss-css/blocks/footer.css
@@ -3,8 +3,12 @@
 /* mixin */
 /* variables */
 /* mixin */
-.footer-container {
+.footer {
   background-color: #fff6ef;
+}
+
+.footer-container {
+  padding-top: 10px;
 }
 
 .info {
@@ -40,6 +44,7 @@
     height: 25px;
   }
   .footer-menu {
+    padding-top: 20px;
     min-width: 480px;
   }
   .footer-menu-list:nth-child(1),
