--- a/scss-css/blocks/footer.scss
+++ b/scss-css/blocks/footer.scss
@@ -6,8 +6,12 @@ $main-background-color: #fff6ef;
 /* mixin */
 @import "mixin.scss";
 
-.footer-container {
+.footer {
   background-color: $main-background-color;
+}
+
+.footer-container {
+  padding-top: 10px;
 }
 
 .info {
@@ -42,6 +46,7 @@ $main-background-color: #fff6ef;
   }
 
   .footer-menu {
+    padding-top: 20px;
     min-width: 480px;
   }
 
