--- a/scss-css/style.scss
+++ b/scss-css/style.scss
@@ -18,6 +18,9 @@
 /* section reviews */
 @import "blocks/reviews.scss";
 
+/* section reviews page */
+@import "blocks/reviews-page.scss";
+
 /* section gallery */
 @import "blocks/gallery.scss";
 
