--- a/scss-css/blocks/reviews.scss
+++ b/scss-css/blocks/reviews.scss
@@ -17,14 +17,17 @@ $primory-color: #03a9f4;
   max-width: 450px;
 }
 
-.review-slider {
-}
-
 .reviews-title {
   padding-bottom: 20px;
 
   @include font(18px, $primory-color);
   text-align: center;
+}
+
+.item-name,
+.guide-name,
+.review-date {
+  color: rgb(33 37 41 / 75%);
 }
 
 /* review-cart */
@@ -33,7 +36,6 @@ $primory-color: #03a9f4;
   padding: 10px 20px;
 
   min-width: 240px;
-  height: 400px;
 
   border: none;
   align-items: center;
