--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -30,8 +30,8 @@
   color: rgba(33, 37, 41, 0.75);
 }
 
-/* review-cart */
-.review-cart {
+/* review-cart-slider */
+.review-cart-slider {
   padding: 10px 20px;
   min-width: 240px;
   border: none;
@@ -58,6 +58,7 @@
 }
 
 .review-text {
+  padding-top: 20px;
   color: black;
   flex-grow: 1;
 }
@@ -98,6 +99,26 @@
   transform: rotateZ(-180deg);
   display: inline-block;
   translate: -15px 0px;
+}
+
+/* review-cart */
+.review-cart {
+  margin: 20px;
+  padding: 40px;
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  border-radius: 16px;
+  outline: 1px solid #03a9f4;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  font-family: "Gabriela", serif;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  color: #03a9f4;
+  flex-direction: column;
 }
 
 @media (min-width: 420px) {
