--- a/scss-css/blocks/reviews-page.scss
+++ b/scss-css/blocks/reviews-page.scss
@@ -1,7 +1,32 @@
+/* variables */
+$primory-color: #03a9f4;
+$main-background-color: #fff6ef;
+/* $main-background-color: #d7dcdf; */
+
+/*mixin */
+@import "mixin.scss";
+
 .reviews-page-container {
   padding: 50px 0px;
 }
 
 .reviews-list {
   margin: 20px;
+}
+
+.review-form-container {
+  padding: 50px 20px;
+
+  border-radius: 16px;
+  background-color: $main-background-color;
+}
+
+.review-form {
+  min-width: 280px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  gap: 10px;
 }
