--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -103,8 +103,7 @@
 
 /* review-cart */
 .review-cart {
-  margin: 20px;
-  padding: 40px;
+  margin-bottom: 20px;
   padding: 10px;
   width: 100%;
   height: 100%;
