--- a/scss-css/blocks/reviews.scss
+++ b/scss-css/blocks/reviews.scss
@@ -86,8 +86,7 @@ $primory-color: #03a9f4;
 
 /* review-cart */
 .review-cart {
-  margin: 20px;
-  padding: 40px;
+  margin-bottom: 20px;
 
   @include border-blue(100%, 100%);
 
