--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -881,7 +881,6 @@
 }
 /* section reviews page */
 /* variables */
-/* $main-background-color: #d7dcdf; */
 /*mixin */
 /* variables */
 /* mixin */
@@ -893,20 +892,66 @@
   margin: 20px;
 }
 
-.review-form-container {
-  padding: 50px 20px;
-  border-radius: 16px;
-  background-color: #fff6ef;
+.add-review {
+  text-align: end;
 }
 
 .review-form {
-  min-width: 280px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
 }
 
+.btn-add-review {
+  border: none;
+  background-color: #ffffff;
+}
+
+.add-review-icon {
+  width: 25px;
+  height: 25px;
+}
+
+.add-review-form {
+  padding: 10px;
+  width: 280px;
+  height: 400px;
+  border-radius: 16px;
+  outline: 1px solid #03a9f4;
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
+  display: block;
+}
+
+.input-form {
+  border: none;
+  outline: 1px solid #03a9f4;
+  border-radius: 5px;
+}
+
+.input-form::-moz-placeholder {
+  font-family: "Gabriela", serif;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  color: #7b7873;
+}
+
+.input-form::placeholder {
+  font-family: "Gabriela", serif;
+  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  color: #7b7873;
+}
+
+@media (min-width: 420px) {
+  .add-review-form {
+    width: 320px;
+  }
+}
 /* section gallery */
 /* variables */
 /* mixin */
