--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -894,8 +894,13 @@
 }
 
 /* форма отзыва */
+.review-form-container {
+  display: flex;
+  justify-content: end;
+}
+
 .add-review {
-  text-align: end;
+  width: 20px;
 }
 
 .review-form {
@@ -910,12 +915,19 @@
   background-color: #ffffff;
 }
 
+.add-review:hover .add-review-form {
+  transform: scale(1, 1);
+}
+
 .add-review-icon {
   width: 25px;
   height: 25px;
 }
 
 .add-review-form {
+  margin-top: 10px;
+  position: absolute;
+  right: 10px;
   padding: 10px;
   width: 280px;
   height: 550px;
@@ -925,6 +937,10 @@
   justify-content: space-between;
   align-content: center;
   display: block;
+  background-color: #ffffff;
+  transform: scale(0, 0);
+  transform-origin: right top;
+  transition: 0.5s;
 }
 
 .input-form,
@@ -994,10 +1010,15 @@
 
 @media (min-width: 420px) {
   .add-review-form {
-    width: 320px;
+    width: 390px;
   }
   .review-form-btn {
-    width: 140px;
+    width: 180px;
+  }
+}
+@media (min-width: 620px) {
+  .add-review {
+    width: 40px;
   }
 }
 /* section gallery */
