--- a/scss-css/blocks/blog-page.css
+++ b/scss-css/blocks/blog-page.css
@@ -1,11 +1,4 @@
 /* variables */
 /*mixin */
 /* variables */
-/* mixin */
-.blog-page-container {
-  padding: 50px 0px;
-}
-
-.blog-list {
-  margin: 20px;
-}/*# sourceMappingURL=blog-page.css.map */
+/* mixin *//*# sourceMappingURL=blog-page.css.map */
