--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -220,6 +220,62 @@
     border-radius: 16px;
   }
 }
+/* section breadcrumbles */
+/* mixin */
+/* variables */
+/* mixin */
+/* breadcrumbles */
+.breadcrumbles {
+  padding: 10px 0px;
+}
+
+.menu-breadcrumbles {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  list-style: none;
+}
+
+.menu-link-breadcrumbles,
+.menu-link-breadcrumbles-bold {
+  font-family: "Gabriela", serif;
+  font-size: 12px;
+  font-weight: 400;
+  font-style: normal;
+  color: black;
+  text-decoration: none;
+}
+.menu-link-breadcrumbles:hover,
+.menu-link-breadcrumbles-bold:hover {
+  color: #000000;
+}
+.menu-link-breadcrumbles:active,
+.menu-link-breadcrumbles-bold:active {
+  color: #000000;
+}
+
+.menu-link-breadcrumbles-bold {
+  color: #000000;
+}
+
+.menu-link-breadcrumbles {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.arrow-menu-breadcrumbles {
+  padding: 5px;
+  margin-top: 2px;
+  width: 10px;
+  height: 10px;
+  content: "";
+  background: url("../img/arrow.png") no-repeat;
+  padding-right: 0.5em;
+  background-size: 10px;
+  transform: rotateZ(0deg);
+  display: inline-block;
+  translate: 0px 1px;
+}
+
 /* main */
 /* variables */
 /* mixin */
@@ -658,61 +714,6 @@
     font-size: 20px;
   }
 }
-/* mixin */
-/* variables */
-/* mixin */
-/* breadcrumbles */
-.breadcrumbles {
-  padding: 10px 0px;
-}
-
-.menu-breadcrumbles {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  list-style: none;
-}
-
-.menu-link-breadcrumbles,
-.menu-link-breadcrumbles-bold {
-  font-family: "Gabriela", serif;
-  font-size: 12px;
-  font-weight: 400;
-  font-style: normal;
-  color: black;
-  text-decoration: none;
-}
-.menu-link-breadcrumbles:hover,
-.menu-link-breadcrumbles-bold:hover {
-  color: #000000;
-}
-.menu-link-breadcrumbles:active,
-.menu-link-breadcrumbles-bold:active {
-  color: #000000;
-}
-
-.menu-link-breadcrumbles-bold {
-  color: #000000;
-}
-
-.menu-link-breadcrumbles {
-  color: rgba(0, 0, 0, 0.6);
-}
-
-.arrow-menu-breadcrumbles {
-  padding: 5px;
-  margin-top: 2px;
-  width: 10px;
-  height: 10px;
-  content: "";
-  background: url("../img/arrow.png") no-repeat;
-  padding-right: 0.5em;
-  background-size: 10px;
-  transform: rotateZ(0deg);
-  display: inline-block;
-  translate: 0px 1px;
-}
-
 /* section reviews */
 /* variables */
 /*mixin */
@@ -1061,6 +1062,11 @@
     font-size: 25px;
   }
 }
+/* section blog page */
+/* variables */
+/*mixin */
+/* variables */
+/* mixin */
 /* footer */
 /* variables */
 /* $main-background-color: #d7dcdf; */
