--- a/scss-css/blocks/category-page.css
+++ b/scss-css/blocks/category-page.css
@@ -64,19 +64,20 @@
   content: "";
   width: 20px;
   height: 20px;
+  background: url("../img/icon-arrow-down.png") no-repeat;
+  background-size: 60%;
   padding-right: 0.5em;
   display: inline-block;
-  background: url("../img/icon-arrow-left.png") no-repeat;
 }
 
 .item-list[open] > summary::after {
   content: "";
   width: 20px;
   height: 20px;
+  background: url("../img/icon-arrow-up.png") no-repeat;
+  background-size: 60%;
   padding-right: 0.5em;
   display: inline-block;
-  background: url("../img/icon-arrow-left.png") no-repeat;
-  translate: 10px -2px;
 }
 
 .item-list[open] {
@@ -208,12 +209,10 @@
     font-size: 20px;
   }
   .item-list[open] > summary::after {
-    background-size: 15px;
-    translate: 0px 2px;
+    background-size: 70%;
   }
   .item-title::after {
-    background-size: 15px;
-    translate: 0px 10px;
+    background-size: 70%;
   }
   .basic-info-list,
   .items-link {
