--- a/scss-css/blocks/header.css
+++ b/scss-css/blocks/header.css
@@ -194,6 +194,12 @@
   .link-list {
     font-size: 20px;
   }
+  .link-list::after {
+    translate: 0px 2px;
+  }
+  .list[open] > summary::after {
+    translate: 0px -1px;
+  }
   .menu-list:nth-child(3),
   .menu-list:nth-child(5) {
     display: none;
