--- a/scss-css/blocks/breadcrumbles.css
+++ b/scss-css/blocks/breadcrumbles.css
@@ -42,10 +42,10 @@
 .arrow-menu-breadcrumbles {
   padding: 5px;
   margin-top: 2px;
+  display: inline-block;
   width: 10px;
   height: 10px;
-  padding-right: 0.5em;
-  display: inline-block;
-  background: url("../img/icon-arrow-left.png") no-repeat;
+  background: url("../img/icon-arrow-right.png") no-repeat;
   translate: 0px 1px;
+  background-size: 100%;
 }/*# sourceMappingURL=breadcrumbles.css.map */
