--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -77,22 +77,20 @@
   padding-right: 5px;
 }
 
-.arrow-left {
-  width: 20px;
-  height: 20px;
-  padding-right: 0.5em;
-  display: inline-block;
-  background: url("../img/icon-arrow-left.png") no-repeat;
-  translate: 15px 0px;
-}
-
+.arrow-left,
 .arrow-right {
   width: 20px;
   height: 20px;
-  padding-right: 0.5em;
-  display: inline-block;
+}
+
+.arrow-left {
+  background: url("../img/icon-arrow-left.png") no-repeat;
+  background-size: 100%;
+}
+
+.arrow-right {
   background: url("../img/icon-arrow-right.png") no-repeat;
-  translate: -15px 0px;
+  background-size: 100%;
 }
 
 /* review-cart */
