--- a/scss-css/blocks/reviews.css
+++ b/scss-css/blocks/reviews.css
@@ -136,10 +136,10 @@
     font-size: 14px;
   }
   .arrow-right {
-    translate: -20px 0px;
+    translate: 20px 0px;
   }
   .arrow-left {
-    translate: 20px 0px;
+    translate: -20px 0px;
   }
 }
 @media (min-width: 1024px) {
@@ -154,5 +154,8 @@
   .guide-name,
   .review-date {
     font-size: 16px;
+  }
+  .review-cart-text {
+    height: 400px;
   }
 }/*# sourceMappingURL=reviews.css.map */
