--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -837,10 +837,10 @@
     font-size: 14px;
   }
   .arrow-right {
-    translate: -20px 0px;
+    translate: 20px 0px;
   }
   .arrow-left {
-    translate: 20px 0px;
+    translate: -20px 0px;
   }
 }
 @media (min-width: 1024px) {
@@ -855,6 +855,9 @@
   .guide-name,
   .review-date {
     font-size: 16px;
+  }
+  .review-cart-text {
+    height: 400px;
   }
 }
 /* section reviews page */
