--- a/scss-css/blocks/categories.css
+++ b/scss-css/blocks/categories.css
@@ -100,6 +100,9 @@
 }
 @media (min-width: 700px) {
   .category-cart {
-    width: 315px;
+    width: 310px;
+  }
+  .category-line {
+    padding: 0px 0px 20px 0px;
   }
 }/*# sourceMappingURL=categories.css.map */
