--- a/scss-css/blocks/category-page.scss
+++ b/scss-css/blocks/category-page.scss
@@ -12,12 +12,17 @@ $primory-color: #03a9f4;
 
 .items-container {
   padding: 50px 0px;
+
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 /* item cart */
 
 .item-cart {
   min-width: 280px;
+  max-width: 380px;
 
   margin-bottom: 30px;
 
@@ -30,9 +35,17 @@ $primory-color: #03a9f4;
   border-radius: 16px;
 }
 
+.link-item-cart-desc {
+  position: absolute;
+  top: -1px;
+  opacity: 0;
+
+  text-decoration: none;
+}
+
 .item-cart-desc,
 .item-title {
-  @include font(14px, $primory-color);
+  @include font(20px, $primory-color);
 
   display: flex;
   justify-content: space-between;
@@ -99,13 +112,13 @@ $primory-color: #03a9f4;
 /* section item desc */
 
 .item-desc {
-  @include font(14px);
+  @include font(16px);
 }
 
 .item-text {
   padding: 50px 20px;
 
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .basic-info {
@@ -176,35 +189,17 @@ $primory-color: #03a9f4;
   font-weight: 600;
 }
 
-@media (min-width: 420px) {
-  .basic-info-list,
-  .items-link {
-    width: 280px;
-  }
-
+@media (min-width: 620px) {
   .items-container {
     padding: 50px 20px;
-    display: flex;
+
     justify-content: center;
+    flex-direction: row;
     flex-wrap: wrap;
   }
 
   .item-cart {
     margin: 10px;
-
-    min-width: 380px;
-  }
-}
-
-@media (min-width: 620px) {
-  .item-text,
-  .item-cart-desc,
-  .item-desc-list-title {
-    font-size: 16px;
-  }
-
-  .item-title {
-    font-size: 20px;
   }
 
   .item-list[open] > summary::after {
@@ -222,21 +217,26 @@ $primory-color: #03a9f4;
   }
 }
 
-@media (min-width: 1024px) {
-  .item-text,
-  .item-cart-desc {
-    font-size: 20px;
+@media (min-width: 700px) {
+  .item-details {
+    position: absolute;
+    opacity: 0;
   }
 
-  .item-title {
-    font-size: 25px;
-  }
+  .link-item-cart-desc {
+    position: relative;
 
-  .item-list[open] > summary::after {
-    font-size: 20px;
+    opacity: 1;
   }
 
   .item-title::after {
-    font-size: 20px;
+    background: none;
+  }
+}
+
+@media (min-width: 1024px) {
+  .item-cart {
+    max-width: 310px;
+    margin: 0px 10px 0px 0px;
   }
 }
