--- a/scss-css/style.css
+++ b/scss-css/style.css
@@ -482,9 +482,8 @@
 
 /* item cart */
 .item-cart {
-  min-width: 280px;
-  max-width: 380px;
   margin-bottom: 30px;
+  width: 280px;
   /*shadow */
   outline: 1px solid #d6d3d3;
   border-bottom: 2px solid #c4c2c2;
@@ -586,7 +585,7 @@
 .basic-info-list {
   padding: 10px;
   width: 265px;
-  height: 100px;
+  height: 100%;
   border-radius: 16px;
   outline: 1px solid #03a9f4;
   display: flex;
@@ -639,6 +638,7 @@
 }
 
 .item-desc-text {
+  width: 200px;
   flex-grow: 1;
   text-align: end;
   align-content: center;
@@ -660,6 +660,11 @@
   font-weight: 600;
 }
 
+@media (min-width: 420px) {
+  .item-cart {
+    width: 380px;
+  }
+}
 @media (min-width: 620px) {
   .items-container {
     padding: 50px 20px;
@@ -683,9 +688,13 @@
   }
 }
 @media (min-width: 700px) {
+  .item-cart {
+    max-width: 310px;
+    margin: 0px 20px 20px 0px;
+  }
   .item-details {
     position: absolute;
-    transform: scale(0);
+    opacity: 0;
   }
   .link-item-cart-desc {
     position: relative;
@@ -693,12 +702,6 @@
   }
   .item-title::after {
     background: none;
-  }
-}
-@media (min-width: 1024px) {
-  .item-cart {
-    max-width: 310px;
-    margin: 0px 10px 0px 0px;
   }
 }
 /* section reviews */
